syntax = "proto3";
package pb;

option java_multiple_files = true;
option java_package = "io.textile.textile_grpc";
option java_outer_classname = "Textile";
option objc_class_prefix = "TXTL";

message LoginRequest {
    string email = 1;
}

message LoginReply {
    string ID = 1;
    string sessionID = 2;
}

message SwitchRequest {}

message SwitchReply {}

message LogoutRequest {}

message LogoutReply {}

message WhoamiRequest {}

message WhoamiReply {
    string ID = 1;
    string Email = 2;
    string teamID = 3;
    string teamName = 4;
}

message AddTeamRequest {
    string name = 1;
}

message AddTeamReply {
    string ID = 1;
}

message GetTeamRequest {
    string ID = 1;
}

message GetTeamReply {
    string ID = 1;
    string ownerID = 2;
    string name = 3;
    int64 created = 4;
    repeated Member members = 5;

    message Member {
        string ID = 1;
        string email = 2;
    }
}

message ListTeamsRequest {}

message ListTeamsReply {
    repeated GetTeamReply list = 1;
}

message RemoveTeamRequest {
    string ID = 1;
}

message RemoveTeamReply {}

message InviteToTeamRequest {
    string ID = 1;
    string email = 2;
}

message InviteToTeamReply {
    string inviteID = 1;
}

message LeaveTeamRequest {
    string ID = 1;
}

message LeaveTeamReply {}

message AddProjectRequest {
    string name = 1;
}

message AddProjectReply {
    string ID = 1;
    string storeID = 2;
}

message GetProjectRequest {
    string ID = 1;
}

message GetProjectReply {
    string ID = 1;
    string name = 2;
    string storeID = 3;
    string walletAddress = 4;
    int64 walletBalance = 5;
    int64 created = 6;
}

message ListProjectsRequest {}

message ListProjectsReply {
    repeated GetProjectReply list = 1;
}

message RemoveProjectRequest {
    string ID = 1;
}

message RemoveProjectReply {}

message AddAppTokenRequest {
    string projectID = 1;
}

message AddAppTokenReply {
    string ID = 1;
}

message ListAppTokensRequest {
    string projectID = 1;
}

message ListAppTokensReply {
    repeated string list = 1;
}

message RemoveAppTokenRequest {
    string ID = 1;
}

message RemoveAppTokenReply {}

message AddFolderRequest {
    string name = 1;
    bool public = 2;
    string projectID = 3;
}

message AddFolderReply {
    string ID = 1;
    string path = 2;
}

message GetFolderRequest {
    string name = 1;
}

message GetFolderReply {
    string ID = 1;
    string path = 2;
    string name = 3;
    bool public = 4;
    string projectID = 5;
    int64 created = 6;
    repeated Entry entries = 7;

    message Entry {
        string path = 1;
        int64 size = 2;
        bool isDir = 3;
    }
}

message ListFoldersRequest {
    string projectID = 1;
}

message ListFoldersReply {
    repeated GetFolderReply list = 1;
}

message RemoveFolderRequest {
    string name = 1;
}

message RemoveFolderReply {}

message AddFileRequest {
    oneof payload {
        Header header = 1;
        bytes chunk = 2;
    }

    message Header {
        string path = 1;
    }
}

message AddFileReply {
    oneof payload {
        Event event = 1;
        string error = 2;
    }

    message Event {
        string name = 1;
        string path = 2;
        int64 bytes = 3;
        string size = 4;
    }
}

message GetFileRequest {
    string path = 1;
}

message GetFileReply {
    string path = 2;
    int64 size = 3;
}

message CatFileRequest {
    string path = 1;
}

message CatFileReply {
    bytes chunk = 1;
}

message RemoveFileRequest {
    string path = 1;
}

message RemoveFileReply {}

service API {
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc Logout(LogoutRequest) returns (LogoutReply) {}
    rpc Switch(SwitchRequest) returns (SwitchReply) {}
    rpc Whoami(WhoamiRequest) returns (WhoamiReply) {}

    rpc AddTeam (AddTeamRequest) returns (AddTeamReply) {}
    rpc GetTeam (GetTeamRequest) returns (GetTeamReply) {}
    rpc ListTeams (ListTeamsRequest) returns (ListTeamsReply) {}
    rpc RemoveTeam (RemoveTeamRequest) returns (RemoveTeamReply) {}
    rpc InviteToTeam (InviteToTeamRequest) returns (InviteToTeamReply) {}
    rpc LeaveTeam (LeaveTeamRequest) returns (LeaveTeamReply) {}

    rpc AddProject (AddProjectRequest) returns (AddProjectReply) {}
    rpc GetProject (GetProjectRequest) returns (GetProjectReply) {}
    rpc ListProjects (ListProjectsRequest) returns (ListProjectsReply) {}
    rpc RemoveProject (RemoveProjectRequest) returns (RemoveProjectReply) {}

    rpc AddAppToken (AddAppTokenRequest) returns (AddAppTokenReply) {}
    rpc ListAppTokens (ListAppTokensRequest) returns (ListAppTokensReply) {}
    rpc RemoveAppToken (RemoveAppTokenRequest) returns (RemoveAppTokenReply) {}

    rpc AddFolder (AddFolderRequest) returns (AddFolderReply) {}
    rpc GetFolder (GetFolderRequest) returns (GetFolderReply) {}
    rpc ListFolders (ListFoldersRequest) returns (ListFoldersReply) {}
    rpc RemoveFolder (RemoveFolderRequest) returns (RemoveFolderReply) {}

    rpc AddFile (stream AddFileRequest) returns (stream AddFileReply) {}
    rpc GetFile (GetFileRequest) returns (GetFileReply) {}
    rpc CatFile (CatFileRequest) returns (stream CatFileReply) {}
    rpc RemoveFile (RemoveFileRequest) returns (RemoveFileReply) {}
}
